<resources>
    <string name="app_name">My Twitter Demo</string>
    <string name="user_cover_image_desc">User Cover Image</string>
    <string name="user_profile_picture_desc">User Profile Picture</string>
    <string name="narendra_modi">Narendra Modi</string>
    <string name="elon_musk">Elon Musk</string>
    <string name="description">Description</string>
    <string name="name">Name</string>
    <string name="famous_people_text">Famous People</string>
    <string name="no_tweets">No Tweets</string>

    <!-- Enter your fabric api key here -->
    <string name="api_key">YOUR_FABRIC_API_KEY</string>
</resources>
