<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/activity_user"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="lokeshsaini.mytwitterdemo.UserActivity">

    <ImageView
        android:id="@+id/header_cover_image"
        android:layout_width="match_parent"
        android:layout_height="@dimen/cover_image_height"
        android:contentDescription="@string/user_cover_image_desc"
        android:scaleType="centerCrop" />

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <android.support.v7.widget.CardView
                android:id="@+id/profile_layout"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_alignParentTop="true"
                android:layout_marginLeft="@dimen/activity_horizontal_margin"
                android:layout_marginRight="@dimen/activity_horizontal_margin"
                android:layout_marginTop="150dp"
                app:cardCornerRadius="8dp">

                <RelativeLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content">

                    <TextView
                        android:id="@+id/user_profile_name"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_centerHorizontal="true"
                        android:layout_marginTop="70dp"
                        android:text="@string/name"
                        android:textColor="@color/colorPrimary"
                        android:textSize="28sp"
                        android:textStyle="bold" />

                    <TextView
                        android:id="@+id/user_profile_desc"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_below="@+id/user_profile_name"
                        android:layout_centerHorizontal="true"
                        android:layout_marginBottom="@dimen/activity_vertical_margin"
                        android:layout_marginTop="@dimen/activity_vertical_margin"
                        android:text="@string/description"
                        android:textColor="@color/colorPrimary"
                        android:textSize="14sp" />
                </RelativeLayout>

            </android.support.v7.widget.CardView>

            <android.support.v7.widget.CardView
                android:layout_width="@dimen/profile_picture_size"
                android:layout_height="@dimen/profile_picture_size"
                android:layout_below="@id/profile_layout"
                android:layout_centerHorizontal="true"
                android:layout_marginTop="-220dp"
                android:elevation="4dp"
                android:innerRadius="0dp"
                android:padding="20dp"
                android:shape="ring"
                app:cardCornerRadius="40dp">

                <ImageView
                    android:id="@+id/user_profile_photo"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_alignParentTop="true"
                    android:layout_centerHorizontal="true"
                    android:contentDescription="@string/user_profile_picture_desc" />
            </android.support.v7.widget.CardView>

            <TextView
                android:id="@+id/famous_people_text"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@id/profile_layout"
                android:layout_marginTop="@dimen/activity_vertical_margin"
                android:gravity="center_horizontal"
                android:text="@string/famous_people_text"
                android:textSize="14dp" />

            <android.support.v7.widget.CardView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@id/famous_people_text"
                android:layout_marginBottom="@dimen/activity_vertical_margin"
                android:layout_marginLeft="@dimen/activity_horizontal_margin"
                android:layout_marginRight="@dimen/activity_horizontal_margin"
                android:layout_marginTop="@dimen/activity_vertical_margin"
                app:cardCornerRadius="8dp">

                <android.support.v7.widget.ButtonBarLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content">

                    <Button
                        android:id="@+id/modi"
                        style="?attr/buttonBarButtonStyle"
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:layout_weight="1"
                        android:text="@string/narendra_modi"
                        android:textColor="@color/colorAccent" />

                    <View
                        android:layout_width="1dp"
                        android:layout_height="match_parent"
                        android:background="@color/divider" />

                    <Button
                        android:id="@+id/elon"
                        style="?attr/buttonBarButtonStyle"
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:layout_weight="1"
                        android:text="@string/elon_musk"
                        android:textColor="@color/colorAccent" />

                </android.support.v7.widget.ButtonBarLayout>

            </android.support.v7.widget.CardView>
        </RelativeLayout>
    </ScrollView>
</RelativeLayout>